# Papers.ai

./: .gitignore  Cargo.toml  tree.txt
src/: main.rs
src/entities/: image.rs
src/helper/: decrypt.rs
src/routes/: delete.rs  get_all.rs  get_one.rs  hello.rs  mod.rs  search.rs  send_data.rs
src/services/: gemini.rs
