[package]
name = "papers"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = { version = "0.7.2" }
uuid = { version = "1.16.0", features = ["v4", "v7", "js"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
futures-util = "0.3.31"
mime = "0.3.17"
tokio = "1.45.1"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde_json = "1.0.140"
infer = "0.19.0"
regex = "1.11.1"

sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

sea-orm-macros = "0.12"

# Optional: dotenv support for DATABASE_URL
dotenv = "0.15.0"
elasticsearch = { version = "8.18.0-alpha.1", features = ["rustls-tls"] }
url = "2.5.4"

aes-gcm = "0.10" # For AES in GCM mode
hex = "0.4"
